--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,6 +11,8 @@ services:
     build: .
     container_name: backend
     command: uvicorn api:app --host 0.0.0.0 --port 8000
+    volumes:
+      - .:/app
     ports:
       - "8000:8000"
     depends_on:
@@ -20,6 +22,8 @@ services:
     build: .
     container_name: worker
     command: celery -A tasks.app worker --loglevel=info --concurrency=1
+    volumes:
+      - .:/app
     depends_on:
       - redis
       - backend
@@ -29,13 +33,15 @@ services:
       - "8001:8001"
     volumes:
       - .:/app
+    depends_on:
+      - backend
     environment:
       - PORT=8001
       - PYTHONUNBUFFERED=1
     restart: unless-stopped
     command: python Deploy.py
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://0.0.0.0:8001/"]
+      test: ["CMD", "curl", "-f", "http://localhost:8001/"]
       interval: 30s
       timeout: 10s
       retries: 3
